src/riot-rs-macros/tests/ui/task/misspelled_hook_name.stderr
error: unsupported parameter (`autostart`, `peripherals`, `pool_size`, and hooks `usb_builder_hook` are supported)
  --> tests/ui/task/misspelled_hook_name.rs:11:28
   |
11 | #[riot_rs::task(autostart, usb_builder_hooook)]
   |                            ^^^^^^^^^^^^^^^^^^
